editing the images sources and some colors in the fundraise page relates #10

--- a/fundraiser1/fundraiser1.html
+++ b/fundraiser1/fundraiser1.html
@@ -36,13 +36,13 @@
           <!-- Fundraise Picture Section  -->
           <div class="fundraise-picture">
             <img
-              src="/DonationAPP-team-9/asstes/photo-children.png"
+              src="../asstes/photo-children.png"
               class="children-picture"
-              alt=""
+              alt="photo-children"
             />
             <div class="bar-flex pic-bar">
               <div class="pic-description">
-                <img src="/DonationAPP-team-9/asstes/timer-icon.png" alt="" />
+                <img src="../asstes/timer-icon.png" alt="pic-description" />
                 <p>Created 3 days ago</p>
               </div>
               <div class="education-btn"><p>Education</p></div>
@@ -57,22 +57,22 @@
           <div class="donation">
             <div>
               <img
-                src="/DonationAPP-team-9/asstes/photo-person3.png"
+                src="../asstes/photo-person3.png"
                 class="personal-pic"
                 alt="Person-pic-3"
               />
               <img
-                src="/DonationAPP-team-9/asstes/photo-person2.png"
+                src="../asstes/photo-person2.png"
                 class="personal-pic"
                 alt="person-pic 2"
               />
               <img
-                src="/DonationAPP-team-9/asstes/photo-person5.png"
+                src="../asstes/photo-person5.png"
                 class="personal-pic"
                 alt="person-pic 5"
               />
               <img
-                src="/DonationAPP-team-9/asstes/photo-person1.png"
+                src="../asstes/photo-person1.png"
                 class="personal-pic"
                 alt="person-pic 1"
               />
@@ -94,7 +94,7 @@
             <h4>Oraganiser</h4>
             <div class="profile-box">
               <img
-                src="/DonationAPP-team-9/asstes/profile-llipse.png"
+                src="../asstes/profile-llipse.png"
                 alt="profile-pic"
                 class="profile-pic"
               />
