link pages relates #18

--- a/after-sighn-up/after-sighn-up.html
+++ b/after-sighn-up/after-sighn-up.html
@@ -77,7 +77,7 @@
         <p class="par-1">Do you really have</p>
         <p class="par-2">a creative <span>idea?</span></p>
 
-        <button type="button">Start Campaign</button>
+        <button type="button"> <a href="../fundraiser1/fundraiser1.html">Start Campaign</a></button>
       </div>
     </section>
     <section>
