--- a/fundraiser1/fundraiser1.html
+++ b/fundraiser1/fundraiser1.html
@@ -114,7 +114,9 @@
               necessitatibus assumenda saepe!....<span>Read more</span>
             </p>
           </article>
-          <button class="donate-btn">Donate Now</button>
+          <button class="donate-btn">
+            <a href="../blog/blog.html">Donate Now</a>
+          </button>
         </div>
       </section>
     </main>
