--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor non vestibulum vitae.</p>
         <form>
               <button class="button1" type="submit">Create Account</button>
-              <button class="button2" type="submit">Log in as Guest</button>
+            <button class="button2" type="submit"><a href="./after-sighn-up/after-sighn-up.html">Log in as Guest</a></button>
         </form>
       </main>
 
